fixed spacing on nav bar and added to all existing pages

--- a/css/static/css/custom.css
+++ b/css/static/css/custom.css
@@ -12,3 +12,7 @@
 .table > tfoot > tr.top > th {
   background-color: #85adad;
 }
+
+body {
+    background-color: #D0D0D0;
+}
